# red-ball

./: .gitignore  CMakeLists.txt  README.md
red-ball-core/src/main/c++/red_ball/core/: exceptions.hpp
red-ball-core/src/main/c++/red_ball/core/actions/: Action.hpp  Change.hpp  Sequence.cpp  Sequence.hpp  Timeline.cpp  Timeline.hpp
red-ball-game/src/main/c++/red_ball/game/: Actor.cpp  Actor.hpp  Game.cpp  Game.hpp
red-ball-graphics/src/main/c++/red_ball/graphics/: A2DView.cpp  A2DView.hpp  A3DView.cpp  A3DView.hpp  AmbientLightBuffer.cpp  AmbientLightBuffer.hpp  BasicModel.cpp  BasicModel.hpp  BasicShader.cpp  BasicShader.hpp  Camera.cpp  Camera.hpp  CameraBuffer.cpp  CameraBuffer.hpp  ConstantBuffer.cpp  ConstantBuffer.hpp  Direct3DDisplay.cpp  Direct3DDisplay.hpp  DirectionalLightBuffer.cpp  DirectionalLightBuffer.hpp  DisplayInfo.cpp  DisplayInfo.hpp  GraphicsContext.cpp  GraphicsContext.hpp  MatrixBuffer.cpp  MatrixBuffer.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  ObjFileLoader.cpp  ObjFileLoader.hpp  RenderingQueue.cpp  RenderingQueue.hpp  SamplerState.cpp  SamplerState.hpp  Shader.cpp  Shader.hpp  SpecularLightBuffer.cpp  SpecularLightBuffer.hpp  (+8 more)
red-ball-graphics/src/main/hlsl/: simple.ps  simple.vs
red-ball-graphics/src/main/resources/: bitch-please.dds  bitch-please.xcf
red-ball-ui/src/main/c++/red_ball/ui/: EventListener.cpp  EventListener.hpp  UI.cpp  UI.hpp  Window.cpp  Window.hpp  main.cpp
red-ball-utils/src/main/c++/red_ball/utils/: COMWrapper.hpp  Timer.cpp  Timer.hpp  endian.hpp  geometry.hpp  pointee.hpp
red-ball-windows/src/main/c++/red_ball/windows/: windows.hpp
